--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
 
 # Orchestrate or schedule a set of jobs, see https://circleci.com/docs/2.0/workflows/
 workflows:
-  sast-deploy-dast:
+  workflow:
     jobs:
       - deploy
+      # Run python safety check
       - python-safety
